# IGLOO

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  WORKSPACE  opengl_tutorial.sublime-project  readme.md  requirements.txt
.github/workflows/: lint.yml  main.yml
examples/3d_viewer/: BUILD  main.cpp
examples/3d_viewer/utils/: point_cloud.cpp  point_cloud.h  point_cloud_test.cpp
examples/hello_triangle/: BUILD  main.cpp
examples/hello_window/: main.cpp
examples/opengl_tutorials/1_hello_triangle/: main.cpp
examples/opengl_tutorials/2_textures/: main.cpp
examples/opengl_tutorials/3_camera/: BUILD  main.cpp
gl/: CMakeLists.txt
gl/core/: BUILD  CMakeLists.txt  buffer.h  buffer_test.cpp  buffer_traits.h  gl_base.h  init.h  main_test.cpp  opengl_object.h  program.cpp  program.h  program_test.cpp  shader.cpp  shader.h  shader_test.cpp  texture.cpp  texture.h  traits.h  uniform.cpp  uniform.h  uniform_test.cpp  vertex_array_buffer.h
gl/core/test_shaders/: shader.frag  shader.vert  wrong_shader.vert
gl/scene/: BUILD  font.cpp  font.h  font_pool.cpp  font_pool.h  font_pool_test.cpp  font_test.cpp  program_pool.cpp  program_pool.h  program_pool_test.cpp  scene_graph.cpp  scene_graph.h  scene_graph_test.cpp
gl/scene/drawables/: all.cpp  all.h  drawable.cpp  drawable.h
gl/scene/fonts/: ubuntu.fnt
gl/scene/shaders/: coordinate_system.geom  coordinate_system.vert  points.vert  simple.frag  text.vert  texture.frag  texture.geom  texture.vert  texture_on_screen.geom
gl/ui/core/: BUILD  user_input_handler.h  user_input_handler_test.cpp
gl/ui/glfw/: BUILD  CMakeLists.txt  glfw_user_input_handler.cpp  glfw_user_input_handler.h  mouse_event_handler.h  viewer.cpp  viewer.h
gl/utils/: BUILD  camera.h  camera_test.cpp  eigen_traits.h  eigen_traits_test.cpp
gl/viewer/: BUILD  viewer.cpp  viewer.h
hello_world/: CMakeLists.txt
hello_world/include/glad/: glad.h
hello_world/src/: CMakeLists.txt  glad.c  main.cpp
opengl_tutorials/0_hello_window/: main.cpp
opengl_tutorials/2_textures/: BUILD  main.cpp
opengl_tutorials/3_camera/: main.cpp
opengl_tutorials/3d_viewer/: main.cpp
opengl_tutorials/core/: BUILD  buffer.h  buffer_test.cpp  buffer_traits.h  gl_base.h  main_test.cpp  program.h  shader.cpp  shader.h  uniform.h  uniform_test.cpp  vertex_array_buffer.h
opengl_tutorials/hello_triangle/: BUILD  main.cpp
opengl_tutorials/textures/: BUILD  main.cpp
opengl_tutorials/utils/: BUILD  eigen_utils.h  file_utils.h  shader_loader.h  type_utils.h
submodules/: CMakeLists.txt
utils/: BUILD  CMakeLists.txt  eigen_utils.h  file_utils.h  image.h  image_test.cpp  macro_utils.h  macro_utils_test.cpp  type_traits.h
(+16 files in other folders)
